# src/api/UserRouter.ts
@@ -1,6 +1,6 @@
-import { Router } from 'express';
-import { UserFacade } from '../facade';
-import { logger } from '../config/logger/logger';
+import { Router } from "express";
+import { UserFacade } from "../facade";
+import { logger } from "../config/logger/logger";
 
 /**
  * @constant {express.Router}
@@ -21,13 +21,13 @@ const router: Router = Router();
  *        content:
  *          appication/json:
  *            schema:
- *              $ref: '#/components/schemas/UserTO'
+ *              $ref: '#/components/schemas/UserTo'
  *      400:
  *        description: Error bad parameters
  *        content:
  *          application/json:
  *            schema:
- *              $ref: '#/components/schemas/ErrorTo'
+ *              $ref: '#/components/schemas/UserTo'
  * components:
  *   schemas:
  *     UserTO:
@@ -41,32 +41,136 @@ const router: Router = Router();
  *              example: rjaforever@gmail.com
  *              message: Users
  */
-router.get('/users', UserFacade.findAll);
+router.get("", UserFacade.findAll);
 
 /**
- * GET method route
- * @example http://localhost:PORT/ping
+ * POST method route
+ * @example http://localhost:PORT/users
  * @swagger
- * /ping/:
- *  get:
- *    description: Test service
- *    tags: ["Ping"]
+ * /users:
+ *  post:
+ *    description: create Users
+ *    tags: ["Users"]
+ *    requestBody:
+ *      description: object user
+ *      required: true
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/UserTo'
  *    responses:
  *      200:
- *        description: Pong
+ *        description: All Users
  *        content:
  *          appication/json:
- *            example:
- *              status: 200
- *              message: pong
+ *            schema:
+ *              $ref: '#/components/schemas/UserTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
  */
-router.get('/ping', async (req, res) => {
-    logger.info("(%s) - Request accepted: %s","UserRouter.ts",'');
-    res.send('pong');
-    logger.info("(%s) - Sending Response: %s","UserRouter.ts",{data:"pong"});
-});
+router.post("", UserFacade.create);
+
+// /**
+//  * GET method route
+//  * @example http://localhost:PORT/ping
+//  * @swagger
+//  * /ping/:
+//  *  get:
+//  *    description: Test service
+//  *    tags: ["Ping"]
+//  *    responses:
+//  *      200:
+//  *        description: Pong
+//  *        content:
+//  *          appication/json:
+//  *            example:
+//  *              status: 200
+//  *              message: pong
+//  */
+// router.get('/ping', async (req, res) => {
+//     logger.info("(%s) - Request accepted: %s","UserRouter.ts",'');
+//     res.send('pong');
+//     logger.info("(%s) - Sending Response: %s","UserRouter.ts",{data:"pong"});
+// });
+
+/**
+ * DELETE method route
+ * @example http://localhost:PORT/users
+ * @swagger
+ * /users/{id}/id:
+ *  delete:
+ *    description: delete Users
+ *    tags: ["Users"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    responses:
+ *      200:
+ *        description: All Users
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.delete("/:id/id", UserFacade.delete_user);
+
+/**
+ * PATCH method route
+ * @example http://localhost:PORT/users
+ * @swagger
+ * /users/{id}/id:
+ *  patch:
+ *    description: update Users
+ *    tags: ["Users"]
+ *    parameters : [
+ *      {
+ *         name: 'id',
+ *         in: 'path',
+ *         schema: {
+ *           type: 'number',
+ *           example: 1
+ *         },
+ *         required: true
+ *      }
+ *    ]
+ *    requestBody:
+ *      description: object user
+ *      required: true
+ *      content:
+ *        application/json:
+ *          schema:
+ *            $ref: '#/components/schemas/UserTo'
+ *    responses:
+ *      200:
+ *        description: All Users
+ *        content:
+ *          appication/json:
+ *            schema:
+ *              $ref: '#/components/schemas/UserTo'
+ *      400:
+ *        description: Error bad parameters
+ *        content:
+ *          application/json:
+ *            schema:
+ *              $ref: '#/components/schemas/ErrorTo'
+ */
+router.patch("/:id/id", UserFacade.update_user);
 
 /**
  * @export {express.Router}
  */
-export default router;
+export { router };
